<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FistBump</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="next">Next</string>
    <string name="menu_settings">NFC settings</string>
    
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="reset_password">Reset Password</string>
    <string name="profile">Profile</string>
    <string name="help">Help</string>
    <string name="find_users">Find Fistbumpers</string>
    <string name="bump_device">Fistbump Now</string>
    <string name="email_hint">Email Address</string>
    <string name="pwd_hint">Password</string>
    <string name="hello">Awaiting incoming transmission from partner..</string>
    <string name="birthday">Birthday</string>
    <string name="finished">Finished</string>
    <string name="game">Get to know</string>
    <string name="power">What is your power animal?</string>
    <string name="vacuum">How good is a vacuum if it really sucks?</string>
    <string name="MACPC">Mac or PC?</string>
    <string name="LameVDay">Is Valentines Day lame?</string>
    <string name="ESports">Sports or eSports?</string>
    <string name="Pizza">How would scissors help a delivery man??</string>

    <!--  User setup stuff -->
    <string name="not_logged_in">You\'re not logged in. Do you want to register a new account or log in to an existing one?</string>
    
	<!-- Profile stuff -->
    <string name="full_name">Full Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="favorite_color">Favorite Color</string>
    <string name="favorite_joke">Favorite Joke</string>
    <string name="looking_for">Looking For</string>
    <string name="login_slogan">Log in to FistBump.</string>
    
    <!--  Location stuff -->
    <string name="finding_users">Finding Nearby Users</string>
    <string name="results">Users Near You</string>
    <string name="no_maps">Sorry, this device does not support Google Maps.</string>
    <string name="no_fused">Sorry, this device does not support Google Location Services.</string>
    
    <color name="white">#FFFFFF</color>
    <color name="blue">#0000FF</color>

</resources>
