<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#FFFFFF"
    >
    
   <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:layout_gravity="right"
        android:src="@drawable/logo" />
             
<TextView  
    android:id="@+id/mySharedString"
    android:layout_marginLeft="24dp"
    android:layout_marginRight="24dp"
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:background="#000000" 
    android:textColor= "@android:color/white"
    android:text="@string/power"
  
    />

<TextView  
    android:id="@+id/mySharedString"
    android:layout_marginLeft="24dp"
    android:layout_marginRight="24dp"
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:layout_marginTop="14dp"
    android:background="#000000" 
    android:textColor= "@android:color/white"
    android:text="@string/vacuum"
  
    />

<TextView  
    android:id="@+id/mySharedString"
    android:layout_marginLeft="24dp"
    android:layout_marginRight="24dp"
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:layout_marginTop="14dp"
    android:background="#000000" 
    android:textColor= "@android:color/white"
    android:text="@string/MACPC"
  
    />
<TextView  
    android:id="@+id/mySharedString"
    android:layout_marginLeft="24dp"
    android:layout_marginRight="24dp"
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:layout_marginTop="14dp"
    android:background="#000000" 
    android:textColor= "@android:color/white"
    android:text="@string/LameVDay"
  
    />

<TextView  
    android:id="@+id/mySharedString"
    android:layout_marginLeft="24dp"
    android:layout_marginRight="24dp"
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:layout_marginTop="14dp"
    android:background="#000000" 
    android:textColor= "@android:color/white"
    android:text="@string/ESports"
  
    />

<TextView  
    android:id="@+id/mySharedString"
    android:layout_marginLeft="24dp"
    android:layout_marginRight="24dp"
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:layout_marginTop="14dp"
    android:background="#000000" 
    android:textColor= "@android:color/white"
    android:text="@string/Pizza"
  
    />






</LinearLayout>
