<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    
    <LinearLayout
    	android:layout_width="fill_parent"
    	android:layout_height="fill_parent"
    	android:background="@color/white"
    	android:orientation="vertical" >
    
	    <ImageView
	        android:id="@+id/logo"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="14dp"
	        android:layout_gravity="right"
	        android:src="@drawable/logo" />
	            
	            <TextView
	                android:id="@+id/login_text"
	                android:layout_width="wrap_content"
	        		android:layout_height="wrap_content"
	        		android:layout_gravity="center"
	        		android:textColorHint= "@android:color/black"
	        		android:textStyle="bold"
	        		android:textSize="20sp"
	        		android:layout_marginTop="24dp"
	        		android:layout_below="@+id/logo"
	        		android:text="@string/login_slogan" />
	            
	                 <ImageView
	        android:id="@+id/fist"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center"
	        android:src="@drawable/clipper_fist" />
	
	    <TextView
	        android:id="@+id/textView1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/fist"
	        android:layout_gravity="left"
	        android:layout_marginLeft="33dp"
	        android:layout_marginRight="33dp"
	        android:textColorHint= "@android:color/black"
	        android:layout_marginTop="34dp"
	        android:text="@string/email_hint" />
	
	    <EditText
	        android:id="@+id/email_address"
	        android:layout_width="fill_parent"
	        android:layout_marginLeft="33dp"
	        android:layout_marginRight="33dp"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center"
	        android:layout_below="@+id/textView1"
	        android:ems="10"
	        android:inputType="textEmailAddress" >
	
	        <requestFocus />
	    </EditText>
	
	    <TextView
	        android:id="@+id/textView2"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="left"
			android:layout_marginLeft="33dp"
	        android:layout_marginRight="33dp"
	        android:layout_below="@+id/email_address"
	        android:layout_marginTop="34dp"
	        android:text="@string/pwd_hint" />
	
	    <EditText
	        android:id="@+id/password"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center"
	        android:layout_below="@+id/textView2"
	        android:layout_marginLeft="33dp"
	        android:layout_marginRight="33dp"
	        android:ems="10"
	        android:inputType="textPassword" />
	
	    <Button
	        android:id="@+id/login_btn"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	       	android:layout_marginLeft="33dp"
	        android:layout_marginRight="33dp"
	        android:text="@string/login" />
	
	    <Button
	        android:id="@+id/reset_password"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="33dp"
	        android:layout_marginRight="33dp"
	        android:text="@string/reset_password" />
    
    </LinearLayout>

</ScrollView>