<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
   		android:background="@color/white"
    	android:orientation="vertical" >
        
	    <ImageView
	        android:id="@+id/welcome"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:src="@drawable/welcome" />
	
	    <TextView
	        android:id="@+id/textView1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="33dp"
	        android:layout_marginRight="33dp"
	        android:layout_marginTop="50dp"
	        android:textSize="25sp"
	        android:text="@string/email_hint" />
	
	    <EditText
	        android:id="@+id/email_address"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="33dp"
	        android:layout_marginRight="33dp"
	        android:ems="10"
	        android:inputType="textEmailAddress" >
	
	        <requestFocus />
	    </EditText>
	
	    <TextView
	        android:id="@+id/textView2"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="40dp"
	        android:textSize="25sp"
	        android:layout_marginLeft="33dp"
	        android:layout_marginRight="33dp"
	        android:text="@string/pwd_hint" />
	
	    <EditText
	        android:id="@+id/password"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="33dp"
	        android:layout_marginRight="33dp"
	        android:ems="10"
	        android:inputType="textPassword" />
	
	    <TextView
	        android:id="@+id/textView3"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="40dp"
	        android:textSize="25sp"
	        android:layout_marginLeft="33dp"
	        android:layout_marginRight="33dp"
	        android:text="@string/birthday" />
	
	    <EditText
	        android:id="@+id/editText3"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="33dp"
	        android:layout_marginRight="33dp"
	        android:ems="10"
	        android:inputType="date" />
	
	    <ImageButton
	        android:id="@+id/next_btn"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center"
	        android:background="@color/white"
	        android:src="@drawable/next_big" />

    </LinearLayout>
</ScrollView>